# rcm

./: README.md
rcm_examples/: CMakeLists.txt  README.md  package.xml
rcm_examples/launch/: rcm_example_node.launch
rcm_examples/python/: rcm_example_node.py
rcm_impl/: CMakeLists.txt  package.xml
rcm_impl/config/: four_dof_params.yml  three_dof_params.yml
rcm_impl/include/rcm_impl/: base_rcm_action_server.h  four_dof_rcm_action_server.h  rcm_impl.h  three_dof_rcm_action_server.h
rcm_impl/launch/: four_dof_rcm.launch  three_dof_rcm.launch
rcm_impl/python/: log_node.py
rcm_impl/src/: four_dof_rcm_node.cpp  three_dof_rcm_node.cpp
rcm_msgs/: CMakeLists.txt  package.xml
rcm_msgs/action/: rcm.action
rcm_msgs/msg/: rcm.msg
rcom_examples/: CMakeLists.txt  README.md  package.xml
rcom_examples/launch/: rcom_example_node.launch
rcom_examples/python/: rcom_example_node.py
rcom_impl/: CMakeLists.txt  package.xml
rcom_impl/config/: five_dof_params.yml  four_dof_params.yml  params.yml  three_dof_params.yml
rcom_impl/include/rcom_impl/: base_rcom_action_server.h  damped_least_squares.h  five_dof_rcom_action_server.h  four_dof_rcom_action_server.h  pseudo_inverse.h  rcom_action_server.h  rcom_impl.h  three_dof_rcom_action_server.h
rcom_impl/launch/: five_dof_rcom.launch  four_dof_rcom.launch  rcom.launch  three_dof_rcom.launch
rcom_impl/python/: log_node.py
rcom_impl/src/: five_dof_rcom_node.cpp  four_dof_rcom_node.cpp  rcom_node.cpp  rcom_ros_node.cpp  three_dof_rcom_node.cpp
rcom_msgs/: CMakeLists.txt  package.xml
rcom_msgs/action/: rcom.action
rcom_msgs/msg/: p_trocar.msg  rcom.msg  values.msg
