<?xml version="1.0"?>
<package format="2">
  <name>rcm_impl</name>
  <version>0.0.0</version>
  <description>The rcm package implements 'Task Control with Remote Center of Motion Constraint for Minimally Invasive Robotic Surgery'</description>

  <maintainer email="martin.huber@kcl.ac.uk">mhubii</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>eigen</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>eigen_conversions</depend>
  <depend>tf_conversions</depend>
  <depend>tf</depend>
  <depend>trajectory_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>rcm_msgs</depend>
</package>
