<?xml version="1.0"?>
<package format="2">
  <name>rcom_msgs</name>
  <version>1.0.0</version>
  <description>Messages for the remote center of motion</description>
  <maintainer email="martin.huber@kcl.ac.uk">mhubii</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
</package>
